--- a/Lab1-Start-Generalize-Fast.Rmd
+++ b/Lab1-Start-Generalize-Fast.Rmd
@@ -1,12 +1,13 @@
 ---
 title: "Lab 1: Generalize Fast!"
 subtitle: "Replication data from experiment: 
-*Social Competition Drives Collective Action to Reduce Informal Waste Burning in Uganda*"
 author: "**EDS 241**"
 date: "`r Sys.Date()`"
 output: 
     html_document:
       theme: flatly
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, echo=FALSE, warning=FALSE, message=FALSE}
@@ -118,7 +119,10 @@ Review of regression: Ordinary Least Squares (OLS)
 
 ```{r, eval=FALSE}
 
-m1_ols <- 
+m1_ols <- lm(
+    waste_piles ~ treat,
+    data = post_treat_subset
+)
 
 summ(m1_ols, model.fit = FALSE)
 ```
@@ -195,7 +199,12 @@ ggplot(post_treat_subset, aes(x = waste_piles)) +
 
 ### Ok, lets try estimating a Poisson model using `glm()`
 ```{r, eval=FALSE}
-m2_poisson <- 
+m2_poisson <- glm(
+    waste_piles ~ treat,
+    family = poisson(link = 'log'),
+    data = post_treat_subset
+    
+)
 
 summ(m2_poisson, model.fit = FALSE)
 
@@ -230,7 +239,10 @@ check_overdispersion(m2_poisson)
 -   Instead of modeling the count directly, we transform the outcome variable by taking the *natural log* 
 
 ```{r, eval=FALSE}
-m3_log <- 
+m3_log <- lm(
+    log(waste_piles) ~ treat,
+    data = post_treat_subset
+)
 
 summ(m3_log, model.fit = FALSE)
 ```
@@ -316,8 +328,7 @@ post_treat_subset %>%
 
 m4_control <- lm(
     log(waste_piles) ~ 
-        treat + 
-        , ## Add control
+        treat + , ## Add control
     data = post_treat_subset)
 
 summ(m4_control, model.fit = FALSE)
